--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "framer-motion": "^12.23.26",
     "gsap": "^3.14.2",
     "lenis": "^1.3.16",
     "next": "16.1.0",
